Index Nav Bar spacing fix

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ nav {
 ul{
     display: flex;
     list-style-type: none;
-    //width: 16vw;
+    width: 16vw;
     justify-content: space-between;
     font-size: 1.5vw;
 }
@@ -77,7 +77,6 @@ ul{
 
 li {
     margin-top: 3vh;
-	margin-left: 1vw;
 }
 
 .projcts-section{
